<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/typeTextField"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/type"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/typeTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/websiteTextField" />

    <TextView
        android:id="@+id/websiteTextField"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/typeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/websiteLabel" />

    <TextView
        android:id="@+id/websiteLabel"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/website"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/websiteTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextField" />

    <TextView
        android:id="@+id/phoneTextField"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/websiteLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabel" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/phone"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTextField" />

    <TextView
        android:id="@+id/addressTextField"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/phoneLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressLabel" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/address"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addressTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextField" />

    <TextView
        android:id="@+id/nameTextField"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/addressLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="356dp"
        android:layout_height="28dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>